// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/App Bar Default Elevation 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Default elevation
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Default color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault NatDSAppBar-colorDefault-1 MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Default color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Inherit color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorInherit MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Inherit color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar No Elevation 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation0"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        No elevation
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Playground 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        App Bar text
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Primary color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Primary color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar Secondary color 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorSecondary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-3"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        Secondary color
      </h1>
    </div>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar With Icon Buttons 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorPrimary MuiPaper-elevation2"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  >
    <button
      aria-label="Toggle menu"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-filled-navigation-menu NatDSIcon-root-3 NatDSIcon-root-4"
        />
      </span>
    </button>
    <div
      className="NatDSAppBarHighlight NatDSAppBarHighlight-root-5"
    >
      <h1
        className="MuiTypography-root MuiTypography-h6"
      >
        AppBar
      </h1>
    </div>
    <button
      aria-label="Search"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-search NatDSIcon-root-3 NatDSIcon-root-6"
        />
      </span>
    </button>
    <button
      aria-label="Filter"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <span
          className="MuiBadge-root"
        >
          <i
            aria-hidden={true}
            className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-filter NatDSIcon-root-3 NatDSIcon-root-7"
          />
          <span
            className="MuiTypography-root MuiTypography-srOnly"
          >
            Filters (1 active)
          </span>
          <span
            className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary"
          >
            1
          </span>
        </span>
      </span>
    </button>
    <button
      aria-label="My Profile"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-social-myprofile NatDSIcon-root-3 NatDSIcon-root-8"
        />
      </span>
    </button>
  </div>
</header>
`;

exports[`Storyshots Components/App Bar With Prominent Toolbar 1`] = `
<span
  className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
  style={
    Object {
      "height": "",
      "width": "",
    }
  }
/>
`;

exports[`Storyshots Components/App Bar With Tabs 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault NatDSAppBar-colorDefault-1 MuiPaper-elevation2"
>
  <div
    className="MuiTabs-root"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed"
      onScroll={[Function]}
      style={
        Object {
          "marginBottom": null,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-controls="favorites-tab"
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="favorites-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root natds-icons natds-icons-outlined-action-love NatDSIcon-root-2 NatDSIcon-root-3"
            />
            Favorites
          </span>
          <span
            className="PrivateTabIndicator-root-4 PrivateTabIndicator-colorSecondary-6 MuiTabs-indicator"
            style={Object {}}
          />
        </button>
        <button
          aria-controls="outlet-tab"
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="outlet-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root natds-icons natds-icons-outlined-product-outlet NatDSIcon-root-2 NatDSIcon-root-8"
            />
            Outlet
          </span>
        </button>
        <button
          aria-controls="products-tab"
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="products-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root natds-icons natds-icons-outlined-product-brandsproduct NatDSIcon-root-2 NatDSIcon-root-9"
            />
            Products
          </span>
        </button>
        <button
          aria-controls="makeup-tab"
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon MuiTab-fullWidth"
          disabled={false}
          id="makeup-tab"
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper"
          >
            <i
              aria-hidden={true}
              className="material-icons MuiIcon-root natds-icons natds-icons-outlined-product-makeup NatDSIcon-root-2 NatDSIcon-root-10"
            />
            Makeup
          </span>
        </button>
      </div>
    </div>
  </div>
</header>
`;
